--- a/as-modules/build.xml
+++ b/as-modules/build.xml
@@ -1,61 +1,127 @@
 <project name="as-modules" basedir="." default="clean">
 
-   <property name="output.dir" value="${project.build.directory}/infinispan-as-modules" />
+    <property name="output.dir" value="${project.build.directory}/infinispan-as-modules" />
 
-   <import file="lib.xml" />
-   
-   <major-minor version="${project.version}" property="infinispan.slot"/>
-   <major-minor artifact="${org.jgroups:jgroups:jar}" property="jgroups.slot"/> 
+    <import file="lib.xml" />
 
-   <target name="clean">
-      <delete dir="${output.dir}" />
-   </target>
+    <major-minor version="6.3.0" property="infinispan.slot" prefix="jdg-"/>
+    <major-minor version="6.3.0" property="jgroups.slot" prefix="jdg-"/>
 
-   <target name="copy-files">
-      <!-- Copy the resource files -->
-      <copy todir="${output.dir}">
-         <fileset dir="${basedir}/src/main/resources">
-            <include name="**/*.txt" />
-         </fileset>
-      </copy>
-   </target>
+    <target name="clean">
+        <delete dir="${output.dir}" />
+    </target>
 
-   <!-- These modules are for JDG-specific functionality -->
-   <target name="modules">
-   
-      <filterset id="module-filter">
-         <filter token="infinispan.slot" value="${infinispan.slot}" />
-         <filter token="jgroups.slot" value="${jgroups.slot}" />
-      </filterset>
+    <target name="copy-files">
+        <!-- Copy the resource files -->
+        <copy todir="${output.dir}">
+            <fileset dir="${basedir}/src/main/resources">
+                <include name="**/*.txt" />
+            </fileset>
+        </copy>
+    </target>
 
-      <module-def name="org.infinispan" slot="${infinispan.slot}">
-         <maven-resource group="org.infinispan" artifact="infinispan-core" />
-      </module-def>
+    <!-- These modules are for JDG-specific functionality -->
+    <target name="modules">
 
-      <module-def name="org.infinispan.cachestore.jdbc" slot="${infinispan.slot}" />
+        <filterset id="module-filter">
+            <filter token="infinispan.slot" value="${infinispan.slot}" />
+            <filter token="jgroups.slot" value="${jgroups.slot}" />
+        </filterset>
 
-      <module-def name="org.infinispan.cachestore.remote" slot="${infinispan.slot}" />
-      
-      <module-def name="org.infinispan.persistence.jdbc" slot="${infinispan.slot}">
-         <maven-resource group="org.infinispan" artifact="infinispan-cachestore-jdbc" />
-      </module-def>
-      
-      <module-def name="org.infinispan.persistence.remote" slot="${infinispan.slot}">
-         <maven-resource group="org.infinispan" artifact="infinispan-cachestore-remote" />
-      </module-def>
-      
-      <module-def name="org.infinispan.commons" slot="${infinispan.slot}">
-         <maven-resource group="org.infinispan" artifact="infinispan-commons" />
-      </module-def>
+        <module-def name="org.infinispan" slot="${infinispan.slot}">
+            <maven-resource group="org.infinispan" artifact="infinispan-core" />
+        </module-def>
 
-      <module-def name="org.infinispan.tree" slot="${infinispan.slot}">
-         <maven-resource group="org.infinispan" artifact="infinispan-tree" />
-      </module-def>
+        <module-def name="org.infinispan.persistence.jdbc" slot="${infinispan.slot}">
+            <maven-resource group="org.infinispan" artifact="infinispan-cachestore-jdbc" />
+        </module-def>
 
-      <module-def name="org.jgroups" slot="${jgroups.slot}">
-         <maven-resource group="org.jgroups" artifact="jgroups" />
-      </module-def>
-   </target>
+        <module-def name="org.infinispan.persistence.leveldb" slot="${infinispan.slot}">
+            <maven-resource group="org.infinispan" artifact="infinispan-cachestore-leveldb" />
+        </module-def>
 
-   <target name="all" depends="clean, copy-files, modules" />
+        <module-def name="org.infinispan.persistence.remote" slot="${infinispan.slot}">
+            <maven-resource group="org.infinispan" artifact="infinispan-cachestore-remote" />
+        </module-def>
+
+        <module-def name="org.infinispan.persistence.rest" slot="${infinispan.slot}">
+            <maven-resource group="org.infinispan" artifact="infinispan-cachestore-rest" />
+        </module-def>
+
+        <module-def name="org.infinispan.cdi" slot="${infinispan.slot}">
+            <maven-resource group="org.infinispan" artifact="infinispan-cdi" />
+        </module-def>
+
+        <module-def name="org.infinispan.client.hotrod" slot="${infinispan.slot}">
+             <maven-resource group="org.infinispan" artifact="infinispan-client-hotrod" />
+        </module-def>
+
+        <module-def name="org.infinispan.commons" slot="${infinispan.slot}">
+            <maven-resource group="org.infinispan" artifact="infinispan-commons" />
+        </module-def>
+
+        <module-def name="org.infinispan.lucene" slot="${infinispan.slot}">
+            <maven-resource group="org.infinispan" artifact="infinispan-lucene-v3" />
+        </module-def>
+
+        <module-def name="org.infinispan.lucene-directory" slot="${infinispan.slot}">
+            <maven-resource group="org.infinispan" artifact="infinispan-lucene-directory" />
+        </module-def>
+
+        <module-def name="org.infinispan.query" slot="${infinispan.slot}">
+            <maven-resource group="org.infinispan" artifact="infinispan-query" />
+        </module-def>
+
+        <module-def name="org.jgroups" slot="${jgroups.slot}">
+            <maven-resource group="org.jgroups" artifact="jgroups" />
+        </module-def>
+       
+        <module-def name="org.fusesource.leveldbjni-all" slot="${infinispan.slot}">
+            <maven-resource group="org.fusesource.leveldbjni" artifact="leveldbjni-all" />
+        </module-def>
+
+        <module-def name="org.iq80.leveldb" slot="${infinispan.slot}">
+            <maven-resource group="org.iq80.leveldb" artifact="leveldb" />
+        </module-def>
+
+        <module-def name="org.apache.lucene" slot="${infinispan.slot}">
+            <maven-resource group="org.apache.lucene" artifact="lucene-core" />
+            <maven-resource group="org.apache.lucene" artifact="lucene-analyzers" />
+            <maven-resource group="org.apache.lucene" artifact="lucene-facet" />
+            <maven-resource group="org.apache.lucene" artifact="lucene-grouping" />
+            <maven-resource group="org.apache.lucene" artifact="lucene-highlighter" />
+            <maven-resource group="org.apache.lucene" artifact="lucene-memory" />
+            <maven-resource group="org.apache.lucene" artifact="lucene-misc" />
+            <maven-resource group="org.apache.lucene" artifact="lucene-kuromoji" />
+            <maven-resource group="org.apache.lucene" artifact="lucene-phonetic" />
+            <maven-resource group="org.apache.lucene" artifact="lucene-smartcn" />
+            <maven-resource group="org.apache.lucene" artifact="lucene-spatial" />
+            <maven-resource group="org.apache.lucene" artifact="lucene-spellchecker" />
+            <maven-resource group="org.apache.lucene" artifact="lucene-stempel" />
+        </module-def>
+
+        <module-def name="org.apache.solr" slot="${infinispan.slot}">
+            <maven-resource group="org.apache.solr" artifact="solr-analysis-extras" />
+            <maven-resource group="org.apache.solr" artifact="solr-core" />
+            <maven-resource group="org.apache.solr" artifact="solr-solrj" />
+        </module-def>
+
+        <module-def name="org.hibernate.search.engine" slot="${infinispan.slot}">
+            <maven-resource group="com.thoughtworks.paranamer" artifact="paranamer" />
+            <maven-resource group="org.apache.avro" artifact="avro" />
+            <maven-resource group="org.hibernate" artifact="hibernate-search-engine" />
+            <maven-resource group="org.hibernate" artifact="hibernate-search-infinispan" />
+            <maven-resource group="org.hibernate" artifact="hibernate-search-analyzers" />
+        </module-def>
+
+        <module-def name="org.hibernate.hql.parser" slot="${infinispan.slot}">
+            <maven-resource group="org.hibernate.hql" artifact="hibernate-hql-parser" />
+        </module-def>
+
+        <module-def name="org.hibernate.hql.lucene" slot="${infinispan.slot}">
+            <maven-resource group="org.hibernate.hql" artifact="hibernate-hql-lucene" />
+        </module-def>
+    </target>
+
+    <target name="all" depends="clean, copy-files, modules" />
 </project>
