--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
       <module>cli/cli-server</module>
       <module>cli/cli-client</module>
       <module>cdi/extension</module>
+      <module>as-modules</module>
       <module>integrationtests/luceneintegration</module>
       <module>integrationtests/compatibility-mode-it</module>
       <module>compatibility52x</module>
