--- a/persistence/jpa/pom.xml
+++ b/persistence/jpa/pom.xml
@@ -26,7 +26,7 @@
             <configuration>
                <instructions>
                   <Export-Package>
-                     ${project.groupId}.loaders.jpa.*;version=${project.version};-split-package:=error
+                     ${project.groupId}.persistence.jpa.*;version=${project.version};-split-package:=error
                   </Export-Package>
                </instructions>
             </configuration>
@@ -35,14 +35,14 @@
    </build>
    <dependencies>
       <dependency>
-         <groupId>org.hibernate.javax.persistence</groupId>
-         <artifactId>hibernate-jpa-2.0-api</artifactId>
+         <groupId>org.hibernate</groupId>
+         <artifactId>hibernate-core</artifactId>
          <scope>provided</scope>
       </dependency>
       <dependency>
-         <groupId>com.h2database</groupId>
-         <artifactId>h2</artifactId>
-         <scope>test</scope>
+         <groupId>org.hibernate.javax.persistence</groupId>
+         <artifactId>hibernate-jpa-2.0-api</artifactId>
+         <scope>provided</scope>
       </dependency>
       <dependency>
          <groupId>org.slf4j</groupId>
@@ -62,6 +62,13 @@
          <activation>
             <activeByDefault>true</activeByDefault>
          </activation>
+         <dependencies>
+            <dependency>
+               <groupId>com.h2database</groupId>
+               <artifactId>h2</artifactId>
+               <scope>test</scope>
+            </dependency>
+         </dependencies>
          <build>
             <plugins>
                <plugin>
@@ -71,6 +78,57 @@
                      <systemPropertyVariables>
                         <connection.url>jdbc:h2:mem:test;DB_CLOSE_DELAY=-1</connection.url>
                         <driver.class>org.h2.Driver</driver.class>
+                     </systemPropertyVariables>
+                  </configuration>
+               </plugin>
+            </plugins>
+         </build>
+      </profile>
+      <profile>
+         <id>mysql</id>
+         <dependencies>
+            <dependency>
+               <groupId>mysql</groupId>
+               <artifactId>mysql-connector-java</artifactId>
+               <scope>test</scope>
+            </dependency>
+         </dependencies>
+         <build>
+            <plugins>
+               <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-surefire-plugin</artifactId>
+                  <configuration>
+                     <systemPropertyVariables>
+                        <connection.url>jdbc:mysql://localhost:3306/ispn_jpa_test</connection.url>
+                        <driver.class>com.mysql.jdbc.Driver</driver.class>
+                        <db.username>${db.username}</db.username>
+                        <db.password>${db.password}</db.password>
+                     </systemPropertyVariables>
+                  </configuration>
+               </plugin>
+            </plugins>
+         </build>
+      </profile>
+      <profile>
+         <id>postgres</id>
+         <dependencies>
+            <dependency>
+               <groupId>org.postgresql</groupId>
+               <artifactId>postgresql</artifactId>
+            </dependency>
+         </dependencies>
+         <build>
+            <plugins>
+               <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-surefire-plugin</artifactId>
+                  <configuration>
+                     <systemPropertyVariables>
+                        <connection.url>jdbc:postgresql://localhost:5432/ispn_jpa_test</connection.url>
+                        <driver.class>org.postgresql.Driver</driver.class>
+                        <db.username>${db.username}</db.username>
+                        <db.password>${db.password}</db.password>
                      </systemPropertyVariables>
                   </configuration>
                </plugin>
