--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -61,6 +61,7 @@
       <version.protostream>1.0.0.Final-redhat-1</version.protostream>
       <version.aesh>0.33.8.redhat-1</version.aesh>
       <version.antlr>3.4</version.antlr>
+      <version.commons.pool>1.6.redhat-6</version.commons.pool>
       <version.gnu.getopt>1.0.13.redhat-4</version.gnu.getopt>
       <version.hibernate.search>4.4.0.Final-redhat-3</version.hibernate.search>
       <version.jansi>1.9.redhat-3</version.jansi>
@@ -225,6 +226,11 @@
             <version>${project.version}</version>
          </dependency>
          
+         <dependency>
+            <groupId>commons-pool</groupId>
+            <artifactId>commons-pool</artifactId>
+            <version>${version.commons.pool}</version>
+         </dependency>
          <dependency>
             <groupId>gnu.getopt</groupId>
             <artifactId>java-getopt</artifactId>
