--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -105,20 +105,28 @@
       <version.commons.logging>1.1.1</version.commons.logging>
       <version.commons.math>2.2</version.commons.math>
       <version.freemarker>2.3.19-redhat-1</version.freemarker>
+      <version.guava>13.0.1-redhat-1</version.guava>
+      <version.h2.driver>1.3.168-redhat-2</version.h2.driver>
       <version.hibernate.core>4.2.7.SP1-redhat-3</version.hibernate.core>
       <version.hibernate.entitymanager>${version.hibernate.core}</version.hibernate.entitymanager>
       <version.hibernate.hql.parser>1.0.0.Alpha5-redhat-1</version.hibernate.hql.parser>
       <version.hibernate.javax.persistence>1.0.1.Final-redhat-2</version.hibernate.javax.persistence>
       <version.httpclient>4.2.1-redhat-1</version.httpclient>
       <version.jackson>1.9.9-redhat-2</version.jackson>
+      <version.javassist>3.18.1-GA-redhat-1</version.javassist>
       <version.javax.cache>1.0.0-PFD</version.javax.cache>
       <version.javax.enterprise>1.0-SP4.redhat-3</version.javax.enterprise>
       <version.jboss.as>7.3.2.Final-redhat-2</version.jboss.as>
+      <version.jboss.ejb-client>1.0.25.Final-redhat-1</version.jboss.ejb-client>
       <version.jboss.logging.jboss-logging-processor>1.1.0.Final-redhat-1</version.jboss.logging.jboss-logging-processor>
       <version.jboss.logmanager>1.4.0.Final-redhat-1</version.jboss.logmanager>
+      <version.jboss.remoting3>3.3.0.Final-redhat-1</version.jboss.remoting3>
       <version.jboss.spec>3.0.2.Final-redhat-4</version.jboss.spec>
+      <version.org.jboss.spec.javax.resource.jboss-connector-api_1.6_spec>1.0.1.Final-redhat-2</version.org.jboss.spec.javax.resource.jboss-connector-api_1.6_spec>
+      <version.org.jboss.spec.javax.servlet.jboss-servlet-api_3.0_spec>1.0.2.Final-redhat-1</version.org.jboss.spec.javax.servlet.jboss-servlet-api_3.0_spec>
       <version.org.jboss.naming>5.0.5.Final-redhat-1</version.org.jboss.naming>
       <version.org.jboss.jbossts.jbossjts>4.17.15.Final-redhat-4</version.org.jboss.jbossts.jbossjts>
+      <version.jcipannotations>1.0.redhat-6</version.jcipannotations>
       <version.jetty>6.1.25</version.jetty>
       <version.junit>4.11</version.junit>
       <version.leveldb>0.6</version.leveldb>
@@ -147,13 +155,6 @@
    
    <dependencyManagement>
       <dependencies>
-         <dependency>
-            <groupId>org.jboss.component.management</groupId>
-            <artifactId>jboss-dependency-management-eap</artifactId>
-            <version>6.2.0.Final-redhat-91</version>
-            <type>pom</type>
-            <scope>import</scope>
-         </dependency>
          <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>infinispan-cachestore-jdbc</artifactId>
@@ -213,6 +214,11 @@
             <version>${version.c3p0}</version>
          </dependency>
          <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>${version.h2.driver}</version>
+         </dependency>
+         <dependency>
             <groupId>commons-httpclient</groupId>
             <artifactId>commons-httpclient</artifactId>
             <version>${version.commons.httpclient}</version>
@@ -221,6 +227,11 @@
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
             <version>${version.commons.logging}</version>
+         </dependency>
+         <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>${version.javassist}</version>
          </dependency>
          <dependency>
             <groupId>javax.cache</groupId>
@@ -293,9 +304,19 @@
             <version>${version.freemarker}</version>
          </dependency>
          <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${version.guava}</version>
+         </dependency>
+         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-annotations</artifactId>
             <version>${version.hibernate.annotations}</version>
+         </dependency>
+         <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>${version.hibernate.core}</version>
          </dependency>
          <dependency>
             <groupId>org.hibernate</groupId>
@@ -376,6 +397,16 @@
             <scope>test</scope>
          </dependency>
          <dependency>
+            <groupId>org.jboss.spec.javax.resource</groupId>
+            <artifactId>jboss-connector-api_1.6_spec</artifactId>
+            <version>${version.org.jboss.spec.javax.resource.jboss-connector-api_1.6_spec}</version>
+         </dependency>
+         <dependency>
+            <groupId>org.jboss.spec.javax.servlet</groupId>
+            <artifactId>jboss-servlet-api_3.0_spec</artifactId>
+            <version>${version.org.jboss.spec.javax.servlet.jboss-servlet-api_3.0_spec}</version>
+         </dependency>
+         <dependency>
             <groupId>org.jboss.naming</groupId>
             <artifactId>jnp-client</artifactId>
             <version>${version.org.jboss.naming}</version>
@@ -385,6 +416,11 @@
                   <groupId>org.jboss.logging</groupId>
                </exclusion>
             </exclusions>
+         </dependency>
+         <dependency>
+            <groupId>org.jboss</groupId>
+            <artifactId>jboss-ejb-client</artifactId>
+            <version>${version.jboss.ejb-client}</version>
          </dependency>
          <dependency>
             <groupId>org.jboss.naming</groupId>
@@ -402,6 +438,11 @@
             <artifactId>jboss-logmanager</artifactId>
             <version>${version.jboss.logmanager}</version>
             <scope>test</scope>
+         </dependency>
+         <dependency>
+            <groupId>org.jboss.remoting3</groupId>
+            <artifactId>jboss-remoting</artifactId>
+            <version>${version.jboss.remoting3}</version>
          </dependency>
          <dependency>
             <groupId>org.jboss.resteasy</groupId>
@@ -679,6 +720,7 @@
       <dependency>
          <groupId>net.jcip</groupId>
          <artifactId>jcip-annotations</artifactId>
+         <version>${version.jcipannotations}</version>
          <optional>true</optional>
       </dependency>
       <dependency>
